--- a/src/test/resources/config/remote.properties
+++ b/src/test/resources/config/remote.properties
@@ -2,3 +2,4 @@ browser=chrome
 browserVersion=100.0
 browserSize=1920x1080
 remoteDriverUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub/
+baseUrl=https://hh.ru
