--- a/src/test/resources/config/android.properties
+++ b/src/test/resources/config/android.properties
@@ -4,4 +4,4 @@ osVersion=9.0
 project=First Java Project
 build=browserstack-build-1
 name=first_test
-baseUrl=http://hub.browserstack.com/wd/hub
+browserstackBaseUrl=http://hub.browserstack.com/wd/hub
